--- a/TabelaF1.html
+++ b/TabelaF1.html
@@ -915,5 +915,9 @@
             <td>10° - 1 pontos</td>
          </tr>
         </table>
+        
+        <p>Alunos: Ana Carolina Triches e Luiz Mario de Almeida Silva</p>
+        <p>RA: 60009060 e 60009948</p>
+        
     </body>
 </html>
