--- a/Atividade1.html
+++ b/Atividade1.html
@@ -1,41 +1,12 @@
 <html>
     <head>
-        <title>Tabela 1</title>
-        <link rel="stylesheet" href="Atividade1.css" type="text/css">
+        <title>Atividade 1</title>
     </head>
     <body>
-        <table align="center">
-
-            <tr> 
-                <td colspan="6" align="center" class="TituloTabela">Cidades mais populosas da Bahia <br> (estimativa de 2009 do Brasileiro de Geografia e Est&aacute;tistica)</td>
-            </tr>
-
-            <tr class="PrimeiraLinha">
-                <th>Posi&ccedil;&atilde;o</th>
-                <th align="left">Cidade</th>
-                <th>Pop.</th>
-                <th>Posi&ccedil;&atilde;o</th>
-                <th align="left">Cidade</th>
-                <th>Pop.</th>
-            </tr>
-
-            <tr align="left" class="Linhasmeio">
-                <td align="center" class="posicao">1</td>
-                <th class="Cidades">Salvador</th>
-                <td align="center" class="Populacao">2 998 056</td>
-                <td align="center" class="posicao">3</td>
-                <th class="Cidades">Vit&oacute;ria da Conquista</th>
-                <td align="center" class="Populacao">318 901</td>
-            </tr>
-
-            <tr align="left" class="Linhasmeio">
-                <td align="center" class="posicao">2</td>
-                <th class="Cidades">Feira de Santana</th>
-                <td align="center" class="Populacao">591 707</td>
-                <td align="center" class="posicao">4</td>
-                <th class="Cidades">Juazeiro</th>
-                <td align="center" class="Populacao">243 896</td>
-            </tr>
-        </table>
+        <h1 id="Troco">Troco</h1>
+        <input id="Numero" type="number">
+        <input id="Numero2" type="number">
+        <button id="Botao">Subtrair</button>
     </body>
+    <script src="Atividade1.js"></script>
 </html>
